test/src/e2e_vm_tests/test_programs/should_pass/language/ret_string_in_struct/src/main.sw
script;

struct Wrapper {
    name: str,
}

fn main() -> Wrapper {
    Wrapper {
        name: "fuel-labs",
    }
}
