test/src/e2e_vm_tests/test_programs/should_fail/double_underscore_trait_fn/src/main.sw
script;

fn main() {
  __test()
}

trait MyTrait { 
  fn __test() {

  }
}
